[gd_scene load_steps=11 format=2]

[ext_resource path="res://ui/Paused.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/music/stopped.svg" type="Texture" id=2]
[ext_resource path="res://ui/music/playing.svg" type="Texture" id=3]
[ext_resource path="res://ui/singleplayer/GUI.gd" type="Script" id=4]
[ext_resource path="res://ui/help/Help.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/HealthBar.tscn" type="PackedScene" id=7]
[ext_resource path="res://fonts/theme.tres" type="Theme" id=9]

[sub_resource type="AnimatedTexture" id=8]
flags = 4
frames = 2
fps = 0.0
frame_0/texture = ExtResource( 2 )
frame_1/texture = ExtResource( 3 )
frame_1/delay_sec = 0.0

[sub_resource type="Animation" id=6]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath("Ded:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 2.92817 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Ded:color")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="GUI" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 9 )
script = ExtResource( 4 )

[node name="HealthBar" parent="." instance=ExtResource( 7 )]

[node name="MusicToggled" type="Button" parent="."]
margin_left = 56.0
margin_top = 56.0
margin_right = 114.0
margin_bottom = 108.0
focus_mode = 0
enabled_focus_mode = 0
icon = SubResource( 8 )
flat = true

[node name="Menu" type="Button" parent="."]
visible = false
margin_top = 2.0
margin_right = 114.0
margin_bottom = 100.0
text = "Quit to Menu"

[node name="Help" parent="." instance=ExtResource( 6 )]

[node name="Paused" parent="." instance=ExtResource( 1 )]

[node name="Ded" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Ded"]
root_node = NodePath("../..")
anims/FadeIn = SubResource( 6 )
anims/RESET = SubResource( 7 )

[connection signal="pressed" from="MusicToggled" to="." method="_on_MusicToggled_pressed"]
[connection signal="animation_finished" from="Ded/AnimationPlayer" to="." method="on_dead_anim_finished"]
